                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 06-08-2005 added: New video OSD settings/bookmarks menus.
 - 05-08-2005 changed: Defaults to sort descending for rating, date, year + size.
 - 05-08-2005 changed: Fading changed to timebased rather than framebased.  Skin format also changed.
 - 05-08-2005 changed: Added Player.ShowInfo - active in fullscreen visualisation when the user presses WHITE for instance.  Removed XBMC's built-in fading of this info.
 - 05-08-2005 added: Control.HasFocus(controlID) and ButtonScroller.HasIcon(icon) conditional visibility items. 
 - 05-08-2005 fixed: Lookup on IMDb and cancel the select movie dialog didn't reset that dialog.
 - 05-08-2005 fixed: IMDb Lookup of numeric movies.
 - 05-08-2005 fixed: httpapi: made it more thread safe
 - 05-08-2005 added: httpapi: GetCurrentlyPlaying now provides both picture and audio information if music is being played during a slideshow
 - 05-08-2005 fixed: guidialognumeric::showandgetnumber was broken (affected the alarmclock).
 - 05-08-2005 fixed: cbr/cbz support. failed with dir if hide parent items wasn't enabled.
 - 05-08-2005 fixed: some pal dvd's would be properly detected as interlaced
 - 04-08-2005 fixed: filerar. possible lockup at end of file.
 - 04-08-2005 fixed: navigation issues in media windows when activated and last path was a rar.
 - 04-08-2005 fixed: rar files created in unix would fail to play.
 - 04-08-2005 fixed: mplayer logged use of unimplemented function fputs
 - 04-08-2005 fixed: when ftp server was stopped (ie reboot, restartapp...), clients were not disconnected
 - 04-08-2005 fixed: audio was 5 ms later using normal audio output and 10 ms with passthrough